# search_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
GTest/: CMakeLists.txt  TestInvertedIndex.cpp  TestSearchServer.cpp
header/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
source file/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
